added return statement to train, ps on notebook

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -21,10 +21,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Performing interactive authentication. Please follow the instructions on the terminal.\n",
-            "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code FHXFE8LFG to authenticate.\n",
-            "You have logged in. Now let us find all the subscriptions to which you have access...\n",
-            "Interactive authentication successfully completed.\n",
             "Workspace name: quick-starts-ws-134973\n",
             "Azure region: southcentralus\n",
             "Subscription id: 48a74bb7-9950-4cc1-9caa-5d50f995cc55\n",
@@ -32,10 +28,10 @@
           ]
         }
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "gather": {
-          "logged": 1610850720310
+          "logged": 1610859117916
         }
       }
     },
@@ -69,19 +65,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Creating\n",
+            "Found existing cluster, use it.\n",
             "Succeeded\n",
             "AmlCompute wait for completion finished\n",
             "\n",
             "Minimum number of nodes requested have been provisioned\n",
-            "{'currentNodeCount': 0, 'targetNodeCount': 0, 'nodeStateCounts': {'preparingNodeCount': 0, 'runningNodeCount': 0, 'idleNodeCount': 0, 'unusableNodeCount': 0, 'leavingNodeCount': 0, 'preemptedNodeCount': 0}, 'allocationState': 'Steady', 'allocationStateTransitionTime': '2021-01-17T02:32:23.478000+00:00', 'errors': None, 'creationTime': '2021-01-17T02:32:16.349146+00:00', 'modifiedTime': '2021-01-17T02:32:32.548061+00:00', 'provisioningState': 'Succeeded', 'provisioningStateTransitionTime': None, 'scaleSettings': {'minNodeCount': 0, 'maxNodeCount': 4, 'nodeIdleTimeBeforeScaleDown': 'PT120S'}, 'vmPriority': 'Dedicated', 'vmSize': 'STANDARD_D2_V2'}\n"
+            "{'currentNodeCount': 0, 'targetNodeCount': 0, 'nodeStateCounts': {'preparingNodeCount': 0, 'runningNodeCount': 0, 'idleNodeCount': 0, 'unusableNodeCount': 0, 'leavingNodeCount': 0, 'preemptedNodeCount': 0}, 'allocationState': 'Steady', 'allocationStateTransitionTime': '2021-01-17T04:38:03.832000+00:00', 'errors': None, 'creationTime': '2021-01-17T02:32:16.349146+00:00', 'modifiedTime': '2021-01-17T02:32:32.548061+00:00', 'provisioningState': 'Succeeded', 'provisioningStateTransitionTime': None, 'scaleSettings': {'minNodeCount': 0, 'maxNodeCount': 4, 'nodeIdleTimeBeforeScaleDown': 'PT120S'}, 'vmPriority': 'Dedicated', 'vmSize': 'STANDARD_D2_V2'}\n"
           ]
         }
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "gather": {
-          "logged": 1610850757044
+          "logged": 1610859118996
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -111,12 +107,11 @@
         "import os\n",
         "\n",
         "# Specify parameter sampler\n",
-        "ps = RandomParameterSampling( \n",
-        "    list(\n",
-        "        \"learning_rate\" = normal(10,3),\n",
-        "        \"keep_probability\" = uniform(0.05,0.1),\n",
-        "        \"batch_size\" = choice(c(16, 32, 64, 128)),\n",
-        "        )\n",
+        "ps = RandomParameterSampling(\n",
+        "    {\n",
+        "        'learning_rate': normal(10,3),\n",
+        "        'keep_probability': uniform(0.05,0.1)\n",
+        "    }\n",
         ")\n",
         "\n",
         "# Specify a Policy\n",
@@ -150,14 +145,17 @@
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-17-d5c773bb9950>, line 16)",
+          "ename": "NameError",
+          "evalue": "name 'normal' is not defined",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-d5c773bb9950>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    \"learning_rate\" = normal(10,3),\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-28dd573b7a50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m ps = RandomParameterSampling(\n\u001b[1;32m     16\u001b[0m     {\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;34m'learning_rate'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0;34m'keep_probability'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     }\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'normal' is not defined"
           ]
         }
       ],
-      "execution_count": 17,
+      "execution_count": 4,
       "metadata": {
         "gather": {
           "logged": 1610857570940
