--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -77,7 +77,7 @@
       "execution_count": 2,
       "metadata": {
         "gather": {
-          "logged": 1610859118996
+          "logged": 1610859600092
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -101,7 +101,7 @@
         "from azureml.train.hyperdrive.run import PrimaryMetricGoal\n",
         "from azureml.train.hyperdrive.parameter_expressions import choice\n",
         "from azureml.train.hyperdrive.runconfig import HyperDriveConfig\n",
-        "from azureml.train.hyperdrive.parameter_expressions import uniform\n",
+        "from azureml.train.hyperdrive.parameter_expressions import uniform,normal\n",
         "from azureml.core import ScriptRunConfig\n",
         "from azureml.core import Environment\n",
         "import os\n",
@@ -150,12 +150,12 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-28dd573b7a50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m ps = RandomParameterSampling(\n\u001b[1;32m     16\u001b[0m     {\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;34m'learning_rate'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0;34m'keep_probability'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     }\n",
+            "\u001b[0;32m<ipython-input-3-28dd573b7a50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m ps = RandomParameterSampling(\n\u001b[1;32m     16\u001b[0m     {\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;34m'learning_rate'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0;34m'keep_probability'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     }\n",
             "\u001b[0;31mNameError\u001b[0m: name 'normal' is not defined"
           ]
         }
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "gather": {
           "logged": 1610857570940
