stopping point for the night
will clean and turn in tomorrow, might modify the automl metric i am using, hope onxx will work tomorrow, if not will fix and look for alternative

--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -21,10 +21,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Performing interactive authentication. Please follow the instructions on the terminal.\n",
-            "To sign in, use a web browser to open the page https://microsoft.com/devicelogin and enter the code RYK8HHQE7 to authenticate.\n",
-            "You have logged in. Now let us find all the subscriptions to which you have access...\n",
-            "Interactive authentication successfully completed.\n",
             "Workspace name: quick-starts-ws-135742\n",
             "Azure region: southcentralus\n",
             "Subscription id: a0a76bad-11a1-4a2d-9887-97a29122c8ed\n",
@@ -32,10 +28,10 @@
           ]
         }
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "gather": {
-          "logged": 1611369083570
+          "logged": 1611374500510
         }
       }
     },
@@ -72,14 +68,14 @@
             "Found existing cluster, use it.\n",
             "\n",
             "Running\n",
-            "{'errors': [], 'creationTime': '2021-01-23T01:05:58.931235+00:00', 'createdBy': {'userObjectId': 'f45985be-4ead-48df-a064-6f3ac3156482', 'userTenantId': '660b3398-b80e-49d2-bc5b-ac1dc93b5254', 'userName': 'ODL_User 135742'}, 'modifiedTime': '2021-01-23T01:08:45.093392+00:00', 'state': 'Running', 'vmSize': 'STANDARD_DS3_V2'}\n"
+            "{'errors': [], 'creationTime': '2021-01-23T03:51:16.068721+00:00', 'createdBy': {'userObjectId': 'f45985be-4ead-48df-a064-6f3ac3156482', 'userTenantId': '660b3398-b80e-49d2-bc5b-ac1dc93b5254', 'userName': 'ODL_User 135742'}, 'modifiedTime': '2021-01-23T03:53:47.730243+00:00', 'state': 'Running', 'vmSize': 'STANDARD_DS3_V2'}\n"
           ]
         }
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "gather": {
-          "logged": 1611369090245
+          "logged": 1611374506949
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -283,10 +279,10 @@
         "ds = TabularDatasetFactory.from_delimited_files(path=web_path)"
       ],
       "outputs": [],
-      "execution_count": 13,
+      "execution_count": 7,
       "metadata": {
         "gather": {
-          "logged": 1611371082830
+          "logged": 1611374538811
         }
       }
     },
@@ -298,87 +294,13 @@
         "\n",
         "# Use the clean_data function to clean your data.\n",
         "x, y = clean_data(ds)\n",
-        "x['y'] = y\n",
-        "print(x)"
+        "x['y'] = y"
       ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "       age  marital  default  housing  loan  month  day_of_week  duration  \\\n",
-            "0       57        1        0        0     1      5            1       371   \n",
-            "1       55        1        0        1     0      5            4       285   \n",
-            "2       33        1        0        0     0      5            5        52   \n",
-            "3       36        1        0        0     0      6            5       355   \n",
-            "4       27        1        0        1     0      7            5       189   \n",
-            "...    ...      ...      ...      ...   ...    ...          ...       ...   \n",
-            "32945   56        1        0        0     1      7            1       116   \n",
-            "32946   37        1        0        0     1      7            5        69   \n",
-            "32947   26        0        0        0     0      5            2       135   \n",
-            "32948   31        0        0        0     0      4            1       386   \n",
-            "32949   39        1        0        0     0      8            4       179   \n",
-            "\n",
-            "       campaign  pdays  ...  contact_telephone  education_basic.4y  \\\n",
-            "0             1    999  ...                  0                   0   \n",
-            "1             2    999  ...                  1                   0   \n",
-            "2             1    999  ...                  0                   0   \n",
-            "3             4    999  ...                  1                   0   \n",
-            "4             2    999  ...                  0                   0   \n",
-            "...         ...    ...  ...                ...                 ...   \n",
-            "32945         1    999  ...                  0                   1   \n",
-            "32946         7    999  ...                  0                   0   \n",
-            "32947         4    999  ...                  0                   0   \n",
-            "32948         1    999  ...                  0                   0   \n",
-            "32949         1    999  ...                  0                   1   \n",
-            "\n",
-            "       education_basic.6y  education_basic.9y  education_high.school  \\\n",
-            "0                       0                   0                      1   \n",
-            "1                       0                   0                      0   \n",
-            "2                       0                   1                      0   \n",
-            "3                       0                   0                      1   \n",
-            "4                       0                   0                      1   \n",
-            "...                   ...                 ...                    ...   \n",
-            "32945                   0                   0                      0   \n",
-            "32946                   0                   0                      0   \n",
-            "32947                   0                   0                      0   \n",
-            "32948                   0                   1                      0   \n",
-            "32949                   0                   0                      0   \n",
-            "\n",
-            "       education_illiterate  education_professional.course  \\\n",
-            "0                         0                              0   \n",
-            "1                         0                              0   \n",
-            "2                         0                              0   \n",
-            "3                         0                              0   \n",
-            "4                         0                              0   \n",
-            "...                     ...                            ...   \n",
-            "32945                     0                              0   \n",
-            "32946                     0                              0   \n",
-            "32947                     0                              0   \n",
-            "32948                     0                              0   \n",
-            "32949                     0                              0   \n",
-            "\n",
-            "       education_university.degree  education_unknown  y  \n",
-            "0                                0                  0  0  \n",
-            "1                                0                  1  0  \n",
-            "2                                0                  0  0  \n",
-            "3                                0                  0  0  \n",
-            "4                                0                  0  0  \n",
-            "...                            ...                ... ..  \n",
-            "32945                            0                  0  0  \n",
-            "32946                            1                  0  0  \n",
-            "32947                            1                  0  0  \n",
-            "32948                            0                  0  0  \n",
-            "32949                            0                  0  0  \n",
-            "\n",
-            "[32950 rows x 40 columns]\n"
-          ]
-        }
-      ],
-      "execution_count": 14,
+      "outputs": [],
+      "execution_count": 8,
       "metadata": {
         "gather": {
-          "logged": 1611371083361
+          "logged": 1611374541399
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -409,10 +331,10 @@
         "    n_cross_validations=5)"
       ],
       "outputs": [],
-      "execution_count": 15,
+      "execution_count": 9,
       "metadata": {
         "gather": {
-          "logged": 1611371084105
+          "logged": 1611374543174
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -440,96 +362,12 @@
           "text": [
             "No run_configuration provided, running on local with default configuration\n",
             "Running on local machine\n",
-            "Parent Run ID: AutoML_556a94ef-4869-42b9-b753-ca52af49e19c\n",
-            "\n",
-            "Current status: DatasetEvaluation. Gathering dataset statistics.\n",
-            "Current status: FeaturesGeneration. Generating features for the dataset.\n",
-            "Current status: DatasetFeaturization. Beginning to fit featurizers and featurize the dataset.\n",
-            "Current status: DatasetFeaturizationCompleted. Completed fit featurizers and featurizing the dataset.\n",
-            "Current status: DatasetCrossValidationSplit. Generating individually featurized CV splits.\n",
-            "\n",
-            "****************************************************************************************************\n",
-            "DATA GUARDRAILS: \n",
-            "\n",
-            "TYPE:         Missing feature values imputation\n",
-            "STATUS:       PASSED\n",
-            "DESCRIPTION:  No feature missing values were detected in the training data.\n",
-            "              Learn more about missing value imputation: https://aka.ms/AutomatedMLFeaturization\n",
-            "\n",
-            "****************************************************************************************************\n",
-            "\n",
-            "TYPE:         High cardinality feature detection\n",
-            "STATUS:       PASSED\n",
-            "DESCRIPTION:  Your inputs were analyzed, and no high cardinality features were detected.\n",
-            "              Learn more about high cardinality feature handling: https://aka.ms/AutomatedMLFeaturization\n",
-            "\n",
-            "****************************************************************************************************\n",
-            "Current status: ModelSelection. Beginning model selection.\n",
-            "\n",
-            "****************************************************************************************************\n",
-            "ITERATION: The iteration being evaluated.\n",
-            "PIPELINE: A summary description of the pipeline being evaluated.\n",
-            "DURATION: Time taken for the current iteration.\n",
-            "METRIC: The result of computing score on the fitted pipeline.\n",
-            "BEST: The best observed score thus far.\n",
-            "****************************************************************************************************\n",
-            "\n",
-            " ITERATION   PIPELINE                                       DURATION      METRIC      BEST\n",
-            "         0   MaxAbsScaler LightGBM                          0:00:33       0.2372    0.2372\n",
-            "         1   MaxAbsScaler XGBoostRegressor                  0:00:37       0.2385    0.2372\n",
-            "         2   StandardScalerWrapper ElasticNet               0:00:24       0.2655    0.2372\n",
-            "         3   MaxAbsScaler DecisionTree                      0:00:23       0.2510    0.2372\n",
-            "         4   MaxAbsScaler ElasticNet                        0:00:27       0.2571    0.2372\n",
-            "         5   MaxAbsScaler DecisionTree                      0:00:24       0.2448    0.2372\n",
-            "         6   MaxAbsScaler DecisionTree                      0:00:23       0.2437    0.2372\n",
-            "         7   MaxAbsScaler DecisionTree                      0:00:24       0.2453    0.2372\n",
-            "         8   MaxAbsScaler DecisionTree                      0:00:24       0.2512    0.2372\n",
-            "         9   MaxAbsScaler DecisionTree                      0:00:24       0.2447    0.2372\n",
-            "        10   MaxAbsScaler DecisionTree                      0:00:25       0.2472    0.2372\n",
-            "        11   MaxAbsScaler DecisionTree                      0:00:24       0.2428    0.2372\n",
-            "        12   MaxAbsScaler DecisionTree                      0:00:23       0.2513    0.2372\n",
-            "        13   StandardScalerWrapper DecisionTree             0:00:24       0.2487    0.2372\n",
-            "        14   MaxAbsScaler DecisionTree                      0:00:24       0.2550    0.2372\n",
-            "        15   MaxAbsScaler DecisionTree                      0:00:23       0.2542    0.2372\n",
-            "        16   MaxAbsScaler SGD                               0:00:23       0.2699    0.2372\n",
-            "        17   MaxAbsScaler DecisionTree                      0:00:24       0.2430    0.2372\n",
-            "        18   MaxAbsScaler DecisionTree                      0:00:23       0.2523    0.2372\n",
-            "        19   MaxAbsScaler DecisionTree                      0:00:24       0.2519    0.2372\n",
-            "        20   MaxAbsScaler SGD                               0:00:23       0.2707    0.2372\n",
-            "        21   MaxAbsScaler DecisionTree                      0:00:23       0.2456    0.2372\n",
-            "        22   MaxAbsScaler DecisionTree                      0:00:24       0.2469    0.2372\n",
-            "        23   MaxAbsScaler DecisionTree                      0:00:24       0.2502    0.2372\n",
-            "        24   MaxAbsScaler RandomForest                      0:01:21       0.2430    0.2372\n",
-            "        25   MaxAbsScaler LightGBM                          0:00:24       0.2521    0.2372\n",
-            "        26   MaxAbsScaler GradientBoosting                  0:00:57       0.2644    0.2372\n",
-            "        27   MaxAbsScaler DecisionTree                      0:00:24       0.2439    0.2372\n",
-            "        28   MaxAbsScaler DecisionTree                      0:00:23       0.2448    0.2372\n",
-            "        29   MaxAbsScaler DecisionTree                      0:00:24       0.2447    0.2372\n",
-            "        30   MaxAbsScaler LightGBM                          0:00:23       0.2726    0.2372\n",
-            "        31   MaxAbsScaler DecisionTree                      0:00:23       0.2466    0.2372\n",
-            "        32   MaxAbsScaler ExtremeRandomTrees                0:01:21       0.2757    0.2372\n",
-            "        33   MaxAbsScaler RandomForest                      0:01:12       0.2404    0.2372\n",
-            "        34   MaxAbsScaler ExtremeRandomTrees                0:02:25       0.2580    0.2372\n",
-            "        35   MaxAbsScaler LightGBM                          0:00:25       0.2734    0.2372\n",
-            "        36   MaxAbsScaler LightGBM                          0:00:29       0.2633    0.2372\n",
-            "        37   MaxAbsScaler RandomForest                      0:00:48       0.2493    0.2372\n",
-            "        38   VotingEnsemble                                 0:00:52       0.2362    0.2362\n",
-            "        39   StackEnsemble                                  0:00:55       0.2363    0.2362\n",
-            "Stopping criteria reached at iteration 40. Ending experiment.\n",
-            "****************************************************************************************************\n",
-            "Current status: BestRunExplainModel. Best run model explanations started\n",
-            "Current status: ModelExplanationDataSetSetup. Model explanations data setup completed\n",
-            "Current status: PickSurrogateModel. Choosing LightGBM as the surrogate model for explanations\n",
-            "Current status: EngineeredFeatureExplanations. Computation of engineered features started\n",
-            "Current status: EngineeredFeatureExplanations. Computation of engineered features completed\n",
-            "Current status: RawFeaturesExplanations. Computation of raw features started\n",
-            "Current status: RawFeaturesExplanations. Computation of raw features completed\n",
-            "Current status: BestRunExplainModel. Best run model explanations completed\n",
-            "****************************************************************************************************\n"
+            "Parent Run ID: AutoML_a0da03bd-7e12-47c3-8ddb-15d982f9006f\n",
+            "\n"
           ]
         }
       ],
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {
         "jupyter": {
           "outputs_hidden": false,
@@ -548,7 +386,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from azureml.automl.runtime.onnx_convert import OnxxConverter\n",
+        "from azureml.automl.runtime.onnx_convert import *\n",
         "\n",
         "# Get your best run and save the model from that run.\n",
         "\n",
